--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra -std=c++98")
 add_executable(
 			ft_container
 			#mains/vector_main.cpp
-			#mains/map_main.cpp
-			mains/stack_main.cpp
+			mains/map_main.cpp
+			#mains/stack_main.cpp
 
 			containers/vector.hpp
 			containers/map.hpp
